# AIDanskVocabularyBuilder

./: .gitignore  Caddyfile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_gemini.py  update_db.py
backend/app/: db.py  extractor.py  llm_adapter.py  local_tts.py  main.py  models.py  tts.py
backend/app/api/: endpoints.py
docs/: IMPLEMENTATION_PLAN.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Celebration.tsx  Layout.tsx  PointsDisplay.tsx  WordCard.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  PracticePage.tsx  ProgressPage.tsx  UploadPage.tsx
frontend/src/types/: index.ts
www/: index.html
