[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "nltk>=3.9.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.84.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]
